# seclai-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: main-build.yaml  pr-build.yaml
0.0.1/: seclai.html
1.0.2/: search.js
1.0.3/: search.js  seclai.html
1.0.4/: search.js  seclai.html
1.0.5/: search.js  seclai.html
1.0.6/: search.js  seclai.html
1.1.0/: search.js  seclai.html
1.1.1/: search.js  seclai.html
1.1.2/: search.js  seclai.html
1.1.3/: index.html  search.js  seclai.html
1.1.4/: search.js  seclai.html
1.2.0/: search.js  seclai.html
openapi/: seclai.openapi.json
scripts/: set-doc-url-version.py  set-readme-version.py
seclai/: __init__.py  auth.py  seclai.py
seclai/_generated/: README.md  __init__.py  client.py  pyproject.toml
seclai/_generated/api/agent_evaluations/: create_evaluation_criteria_api_agents_agent_id_evaluation_criteria_post.py  create_evaluation_result_api_agents_evaluation_criteria_criteria_id_results_post.py  delete_evaluation_criteria_api_agents_evaluation_criteria_criteria_id_delete.py  get_evaluation_criteria_api_agents_evaluation_criteria_criteria_id_get.py  get_evaluation_summary_api_agents_evaluation_criteria_criteria_id_summary_get.py  get_non_manual_evaluation_summary_api_agents_evaluation_results_non_manual_summary_get.py  list_agent_evaluation_results_api_agents_agent_id_evaluation_results_get.py  list_compatible_runs_api_agents_evaluation_criteria_criteria_id_compatible_runs_get.py  list_evaluation_criteria_api_agents_agent_id_evaluation_criteria_get.py  list_evaluation_results_api_agents_evaluation_criteria_criteria_id_results_get.py  list_evaluation_runs_api_agents_agent_id_evaluation_runs_get.py  list_run_evaluation_results_api_agents_agent_id_runs_run_id_evaluation_results_get.py  (+2 more)
seclai/_generated/models/: __init__.py  add_alert_comment_api_alerts_alert_id_comments_post_response_add_alert_comment_api_alerts_alert_id_comments_post.py  add_comment_request.py  add_conversation_turn_request.py  add_conversation_turn_request_actions_taken_type_0.py  agent_definition_import_error_response.py  agent_definition_response.py  agent_definition_response_definition.py  agent_definition_response_warnings_type_0_item.py  agent_evaluation_tier.py  agent_export_response.py  agent_export_response_agent.py  agent_export_response_alert_configs_type_0_item.py  agent_export_response_dependencies_type_0.py  agent_export_response_evaluation_criteria_type_0_item.py  agent_export_response_governance_policies_type_0_item.py  agent_export_response_trigger_type_0.py  agent_import_preview_request.py  agent_import_preview_request_agent_definition.py  agent_import_preview_response.py  agent_import_preview_response_unresolved_refs_item.py  agent_list_response.py  agent_run_attempt_response.py  agent_run_list_response.py  agent_run_request.py  agent_run_response.py  agent_run_step_response.py  agent_run_stream_request.py  agent_run_stream_request_metadata_type_0.py  agent_summary_response.py  agent_summary_response_sampling_config_type_0.py  agent_trace_match_response.py  agent_trace_search_request.py  agent_trace_search_response.py  ai_assistant_accept_request.py  ai_assistant_accept_response.py  ai_assistant_feedback_request.py  ai_assistant_feedback_request_context_type_0.py  ai_assistant_feedback_response.py  ai_assistant_generate_request.py  (+171 more)
tests/: test_auth_and_headers.py  test_convenience_methods.py  test_generated_bridge.py  test_new_methods.py  test_status_errors.py  test_streaming_agent_runs.py
(+337 files in other folders)
