[project]
name = "seclai"
dynamic = ["version"]
description = "Seclai Python SDK"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "MIT"
authors = [
    { name = "Seclai, Inc.", email = "support@seclai.com" }
]
keywords = ["Seclai", "ai", "agent", "vector", "knowledge base", "cloud"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://seclai.com"
repository = "https://github.com/seclai/seclai-python"
documentation = "https://seclai.com/docs"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependencies]

[tool.black]
target-version = ['py313']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.mypy_cache
  | \.venv
)/
'''

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
explicit_package_bases = true
mypy_path = ["seclai"]
plugins = ["pydantic.mypy"]
exclude = [
  "tests/conftest.py",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disable_error_code = ["annotation-unchecked"]

[[tool.mypy.overrides]]
module = ["test_helpers"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.integration.test_usage_endpoints"]
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.poetry]
package-mode = true
version = "1.0"
include = [
  "README.md",
  "LICENSE",
]

[tool.poetry.dependencies]
pydantic = "^2.12.5"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"
pytest-asyncio = ">=0.23,<1"
openapi-python-client = ">=0.25,<1"
pdoc = ">=14,<15"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--asyncio-mode=auto",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [
  ".", "tests"
]
testpaths = ["tests"]
log_cli = "true"
log_level = "INFO"
filterwarnings = [
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
